--- a/scss/components/dax30-live.scss
+++ b/scss/components/dax30-live.scss
@@ -107,17 +107,19 @@ $screen-lg-min: 1200px;
   }
 
   &__tabs {
-    height: 67px;
+    min-height: 67px;
     padding: 0 20px;
     box-shadow: 0 1px 0 0 rgba(0,0,0,0.06);
     margin-bottom: 40px;
+    display: flex;
+    align-items: stretch;
+    justify-content: flex-start;
   }
 
   &__tab-btn {
     display: inline-block;
     background: none;
     border: none;
-    height: 100%;
     width: 23%;
     opacity: 0.5;
     color: #8B8EA7;
