--- a/scss/components/dax30-why-trade.scss
+++ b/scss/components/dax30-why-trade.scss
@@ -21,9 +21,10 @@ $screen-lg-min: 1200px;
     box-sizing: border-box;
   }
 
-  &__reason--on-desktop {
+  &__reasons--on-desktop {
     display: none;
   }
+  
   &__reason-icon {
     height: 60px;
     width: 60px;
