--- a/css/components/dax30-live.css
+++ b/css/components/dax30-live.css
@@ -46,7 +46,7 @@
     -webkit-flex-basis: 155px;
         -ms-flex-preferred-size: 155px;
             flex-basis: 155px; }
-    .dax30-live__buy-btn:hover {
+    .dax30-live__buy-btn:hover, .dax30-live__buy-btn:focus {
       background-color: #22af5e; }
   .dax30-live__sell-btn {
     background-color: #DA1924;
@@ -54,7 +54,7 @@
         -ms-flex-preferred-size: 155px;
             flex-basis: 155px;
     margin-right: 20px; }
-    .dax30-live__sell-btn:hover {
+    .dax30-live__sell-btn:hover, .dax30-live__sell-btn:focus {
       background-color: #bb151e; }
   .dax30-live__data-line {
     color: #8B8EA8;
