--- a/css/components/dax30-start.css
+++ b/css/components/dax30-start.css
@@ -44,7 +44,7 @@
     margin-top: 20px; }
   .dax30-start__btn--green {
     background-color: #2ECC71; }
-    .dax30-start__btn--green:hover {
+    .dax30-start__btn--green:hover, .dax30-start__btn--green:focus {
       background-color: #22af5e; }
   @media (min-width: 767px) {
     .dax30-start {
