--- a/scss/components/dax30-live.scss
+++ b/scss/components/dax30-live.scss
@@ -57,7 +57,7 @@ $screen-lg-min: 1200px;
 
   &__buy-btn {
     background-color: #2ECC71;
-    &:hover {
+    &:hover, &:focus {
       background-color: #22af5e;
     }
     flex-basis: 155px;
@@ -66,7 +66,7 @@ $screen-lg-min: 1200px;
     background-color: #DA1924;
     flex-basis: 155px;
     margin-right: 20px;
-    &:hover {
+    &:hover, &:focus {
       background-color: #bb151e;
     }
   }
@@ -101,6 +101,7 @@ $screen-lg-min: 1200px;
     margin-bottom: 60px;
     position: relative;
   }
+
   &__chart {
     padding: 0 0 40px 18px;
     position: relative;
