--- a/scss/components/dax30-why-trade.scss
+++ b/scss/components/dax30-why-trade.scss
@@ -102,4 +102,10 @@ $screen-lg-min: 1200px;
       display: flex;
     }
   }
+
+  @media (min-width: $screen-lg-min) { 
+    &__reason-title--one-line {
+      margin-right: -8px;
+    }
+  }
 }
