--- a/css/components/dax30-live.css
+++ b/css/components/dax30-live.css
@@ -123,6 +123,8 @@
     line-height: 16px;
     cursor: pointer;
     text-transform: uppercase; }
+    .dax30-live__tab-btn:focus {
+      outline: none; }
   .dax30-live__tab-btn.active-tab {
     opacity: 1;
     color: #2572DE;
@@ -134,6 +136,8 @@
        -moz-border-radius: 6px;
             border-radius: 6px;
     padding: 40px 0; }
+  .dax30-live__global-title {
+    margin-bottom: 10px; }
   .dax30-live__specifications-slider {
     position: relative; }
     .dax30-live__specifications-slider .slick-arrow {
